# OpenBankAPI

./: .env  .gitignore  OpenBankAPI.postman_collection.json  README.md  auth.py  config.py  db.py  main.py  models.py  pyproject.toml  schemas.py  seed.py  test_main.http  utils.py
models/: __init__.py  account.py  allowed_country.py  customer.py
routers/: __init__.py  account.py  auth.py  customer.py
schemas/: __init__.py  account.py  auth.py  customer.py
tests/: test_account.py  test_auth.py  test_health.py  test_register.py  test_schemas.py
