[project]
name = "openbankapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "faker>=37.8.0",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=."
testpaths = [
    "tests"
]
